--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -10,9 +10,7 @@ body, html {
     width: 100%;
     height: 100vh;
     position: relative;
-    background-color: #ccc; /* Fundo temporário para testar se a tela aparece */
-    /* Se o fundo sólido funcionar, troque para a imagem novamente */
-    /* background-image: url('../../../imagens/map_background.png'); */
+    background-image: url('../../imagens/map_background.png');
     background-repeat: repeat;
     background-size: cover;
 }
