--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -10,7 +10,7 @@ body, html {
     width: 100%;
     height: 100vh;
     position: relative;
-    background-image: url('../../../imagens/fundo.png');
-    background-repeat: repeat;
-    background-size: cover;
+    background-image: url('../../../imagens/fundo.png'); /* Nome da imagem alterado */
+    background-repeat: repeat; /* A imagem será repetida */
+    background-size: cover; /* A imagem vai cobrir a tela */
 }
