--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -1,3 +1,4 @@
+/* Remover margens e padding do body e html */
 body, html {
     margin: 0;
     padding: 0;
@@ -10,7 +11,7 @@ body, html {
     width: 100%;
     height: 100vh;
     position: relative;
-    background-image: url('../../imagens/fundo.png'); /* Nome da imagem alterado */
-    background-repeat: repeat; /* A imagem será repetida */
-    background-size: cover; /* A imagem vai cobrir a tela */
+    background-image: url('../../imagens/fundo.png'); /* Caminho corrigido */
+    background-repeat: repeat;
+    background-size: cover;
 }
