--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -1,4 +1,10 @@
-/* Remover margens e padding do body e html */
+/* Garantir que não haja espaçamento adicional */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body, html {
     margin: 0;
     padding: 0;
