--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -13,12 +13,13 @@ body, html {
     background-color: #f4f4f9;
 }
 
-/* Ajustar a margem do h1 */
+/* Garantir que o h1 não tenha margem e padding */
 h1 {
     margin: 0;
     padding: 0;
 }
 
+/* Definir o contêiner de fundo */
 .map-container {
     width: 100%;
     height: 100vh;
