repetir imagem de fundo

--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -13,14 +13,14 @@ body, html {
     background-color: #f4f4f9;
 }
 
-/* Ajustar o contêiner do mapa */
+/* Definir o contêiner de fundo com a imagem repetida */
 .map-container {
     width: 100%;
-    height: 200vh; /* Duplicando a altura para testar o scroll */
+    height: 200vh; /* Permitir o scroll para testar mais fases */
     position: relative;
-    background-image: url('../../imagens/fundo.png'); /* Caminho corrigido */
-    background-repeat: repeat;
-    background-size: cover;
+    background-image: url('../../imagens/fundo.png');
+    background-repeat: repeat; /* Repetir a imagem horizontal e verticalmente */
+    background-size: auto; /* Manter o tamanho original da imagem */
 }
 
 /* Estilo para as fases */
