--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -13,14 +13,14 @@ body, html {
     background-color: #f4f4f9;
 }
 
-/* Definir o contêiner de fundo com a imagem repetida */
+/* Definir o contêiner de fundo com a imagem repetida e reduzida em 50% */
 .map-container {
     width: 100%;
     height: 200vh; /* Permitir o scroll para testar mais fases */
     position: relative;
     background-image: url('../../imagens/fundo.png');
     background-repeat: repeat; /* Repetir a imagem horizontal e verticalmente */
-    background-size: auto; /* Manter o tamanho original da imagem */
+    background-size: 50%; /* Reduzir o tamanho da imagem para 50% do original */
 }
 
 /* Estilo para as fases */
