--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -13,14 +13,23 @@ body, html {
     background-color: #f4f4f9;
 }
 
-/* Definir o contêiner de fundo com a imagem repetida e reduzida em 50% */
+/* Contêiner do mapa com fundo ajustado */
 .map-container {
     width: 100%;
     height: 200vh; /* Permitir o scroll para testar mais fases */
     position: relative;
     background-image: url('../../imagens/fundo.png');
-    background-repeat: repeat; /* Repetir a imagem horizontal e verticalmente */
-    background-size: 200%; /* Reduzir o tamanho da imagem para 50% do original */
+    background-repeat: repeat;
+    background-size: 200%; /* Reduzir o tamanho da imagem para 200% */
+}
+
+/* Contêiner SVG para as linhas pontilhadas */
+.lines-svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 /* Estilo para as fases */
