novo tamanho cade

--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -54,11 +54,11 @@ body, html {
     position: relative;
 }
 
-/* Ícone de cadeado centralizado na fase */
+/* Ícone de cadeado maior e colorido */
 .phase.locked img.lock-icon {
     position: absolute;
-    width: 25px; /* Tamanho do cadeado */
-    height: 25px;
+    width: 40px; /* Aumentando o tamanho do cadeado */
+    height: 40px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); /* Centralizar o ícone no círculo */
