--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -35,8 +35,10 @@ body, html {
 /* Estilo para as fases */
 .phase {
     position: absolute;
-    width: 100px;
-    height: 100px;
+    width: 8vw;
+    height: 8vw;
+    max-width: 100px;
+    max-height: 100px;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 50%;
     display: flex;
@@ -47,6 +49,12 @@ body, html {
     transition: transform 0.3s ease;
 }
 
+.phase-img {
+    width: 80%;
+    height: auto;
+    border-radius: 50%;
+}
+
 .phase.active {
     box-shadow: 0 0 15px 5px yellow;
 }
@@ -54,31 +62,4 @@ body, html {
 .phase.locked {
     filter: grayscale(100%);
     cursor: not-allowed;
-}
-
-.phase.unlocked {
-    animation: unlockAnimation 1s ease forwards;
-}
-
-@keyframes unlockAnimation {
-    0% {
-        transform: scale(1);
-        box-shadow: 0 0 10px 5px rgba(255, 255, 0, 0.7);
-    }
-    50% {
-        transform: scale(1.3);
-        box-shadow: 0 0 20px 10px rgba(255, 255, 0, 0.7);
-    }
-    100% {
-        transform: scale(1);
-        box-shadow: 0 0 10px 5px rgba(255, 255, 0, 0.7);
-    }
-}
-
-/* Estilo do bonequinho (player) */
-.player {
-    position: absolute;
-    width: 60px; /* Ajuste o tamanho do bonequinho conforme necessário */
-    height: 60px;
-    transition: top 0.5s ease, left 0.5s ease; /* Animação de movimentação */
 }
