--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -1,16 +1,9 @@
-/* Remover margens e padding do body e html */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+/* Estilo do bonequinho */
+.player {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    transition: top 0.5s ease, left 0.5s ease;
 }
 
 /* Contêiner do mapa com fundo ajustado */
