--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -55,4 +55,14 @@
 .phase.locked {
     filter: grayscale(100%);
     cursor: not-allowed;
+
+}
+.lock-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px; /* Ajuste conforme o tamanho desejado */
+    height: 50px;
+    transform: translate(-50%, -50%);
+    z-index: 10; /* Certificar que o cadeado fique sobre o círculo */
 }
