--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -6,7 +6,15 @@
     background-image: url('../../imagens/fundo.png');
     background-size: 200%; /* Ajuste conforme necessário */
     background-repeat: repeat; /* Repete a imagem para cobrir o fundo */
-    overflow-y: auto; /* Habilita scroll vertical */
+    overflow-y: scroll; /* Habilita o scroll vertical */
+}
+
+/* Limita a altura do conteúdo a um tamanho fixo para permitir rolagem */
+#contentWrapper {
+    position: relative;
+    width: 100%;
+    height: 300vh; /* Ajuste conforme o número de fases */
+    overflow: hidden;
 }
 
 /* Estilo dos círculos das fases */
