--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -56,3 +56,16 @@
     filter: grayscale(100%);
     cursor: not-allowed;
 }
+
+.lock-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    filter: none !important; /* Força a remoção de qualquer filtro aplicado ao cadeado */
+    opacity: 1 !important; /* Garante que a opacidade do cadeado esteja normal */
+}
+
