--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -57,15 +57,17 @@
     cursor: not-allowed;
 }
 
+/* Estilo do cadeado */
 .lock-icon {
     position: absolute;
-    top: 50%;
-    left: 50%;
     width: 50px;
     height: 50px;
     transform: translate(-50%, -50%);
     z-index: 10;
-    filter: none !important; /* Força a remoção de qualquer filtro aplicado ao cadeado */
-    opacity: 1 !important; /* Garante que a opacidade do cadeado esteja normal */
+    filter: none !important; /* Força o cadeado a ficar colorido */
+    opacity: 1 !important; /* Garante opacidade completa */
 }
+
+
+
 
