--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -1,3 +1,16 @@
+/* Estilo para o contêiner do título */
+.title-container {
+    text-align: center;
+    margin: 20px 0; /* Espaço em volta do título */
+}
+
+/* Estilo da imagem de título */
+.title-image {
+    max-width: 100%;
+    height: auto;
+    width: 300px; /* Ajuste conforme o tamanho da imagem desejada */
+}
+
 /* Estilo do bonequinho */
 .player {
     position: absolute;
@@ -57,17 +70,14 @@
     cursor: not-allowed;
 }
 
-/* Estilo do cadeado */
 .lock-icon {
     position: absolute;
+    top: 50%;
+    left: 50%;
     width: 50px;
     height: 50px;
     transform: translate(-50%, -50%);
     z-index: 10;
-    filter: none !important; /* Força o cadeado a ficar colorido */
-    opacity: 1 !important; /* Garante opacidade completa */
+    filter: none !important;
+    opacity: 1 !important;
 }
-
-
-
-
