--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -1,7 +1,11 @@
 /* Estilo para o contêiner do título */
 .title-container {
+    position: absolute; /* Para posicionar sobre o fundo */
+    top: 20px; /* Ajuste para posicionar no topo */
+    left: 50%;
+    transform: translateX(-50%); /* Centraliza horizontalmente */
+    z-index: 20; /* Certifica que o título fique sobre outros elementos */
     text-align: center;
-    margin: 20px 0; /* Espaço em volta do título */
 }
 
 /* Estilo da imagem de título */
@@ -27,6 +31,7 @@
     background-image: url('../../imagens/fundo.png');
     background-repeat: repeat;
     background-size: 200%;
+    overflow-y: auto; /* Para habilitar o scroll */
 }
 
 /* Contêiner SVG para as linhas pontilhadas */
