--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -56,11 +56,10 @@
 /* Estilo do cadeado */
 .lock-icon {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 50px;
-    height: 50px;
-    transform: translate(-50%, -50%);
+    top: -10px; /* Mova o cadeado para fora do círculo */
+    left: -10px; /* Ajusta para o lado esquerdo superior */
+    width: 30px; /* Tamanho do cadeado */
+    height: 30px;
     z-index: 10;
     filter: none; /* Garante que o cadeado permaneça colorido */
     opacity: 1;
@@ -76,6 +75,15 @@
 }
 
 /* Estilo das linhas que conectam os círculos */
+.connections {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1; /* Mantém as linhas atrás das fases */
+}
+
 path {
     stroke: black;
     stroke-width: 6;
