--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -56,13 +56,14 @@
 /* Estilo do cadeado */
 .lock-icon {
     position: absolute;
-    top: -10px; /* Mova o cadeado para fora do círculo */
-    left: -10px; /* Ajusta para o lado esquerdo superior */
+    top: -20px; /* Mova o cadeado para fora do círculo */
+    left: -20px; /* Ajusta para o lado esquerdo superior */
     width: 30px; /* Tamanho do cadeado */
     height: 30px;
     z-index: 10;
     filter: none; /* Garante que o cadeado permaneça colorido */
     opacity: 1;
+    background-color: transparent; /* Remove qualquer fundo do cadeado */
 }
 
 /* Estilo do bonequinho */
