--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -56,10 +56,10 @@
 /* Estilo do cadeado */
 .lock-icon {
     position: absolute;
-    top: -50px; /* Mova o cadeado para fora do círculo */
-    left: -50px; /* Ajusta para o lado esquerdo superior */
-    width: 30px; /* Tamanho do cadeado */
-    height: 30px;
+    top: -35px; /* Mova o cadeado para fora do círculo (mais acima) */
+    left: -35px; /* Ajusta para o lado esquerdo superior */
+    width: 25px; /* Reduz o tamanho do cadeado */
+    height: 25px;
     z-index: 10;
     filter: none; /* Garante que o cadeado permaneça colorido */
     opacity: 1;
